--- a/resources/templates/java/sqlmap.vm
+++ b/resources/templates/java/sqlmap.vm
@@ -1,48 +1,34 @@
-<?xml version="1.0" encoding="${encoding}" ?>
-<!--  Generate by ${autoName} Powered by duxing@Taobao -->
-<!DOCTYPE sqlMap PUBLIC "-//ibatis.apache.org//DTD SQL Map 2.0//EN" "http://ibatis.apache.org/dtd/sql-map-2.dtd" >
-<sqlMap namespace="${daoClassName}">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN"
+        "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
+<mapper namespace="${daoClassName}">
 
-    <typeAlias alias="${doClassName}" type="${package}.${doClassName}"/>
-
-    <resultMap id="result${doClassName}Map" class="${package}.${doClassName}">
+    <resultMap id="baseMap" class="${package}.${doClassName}">
 #foreach($!{column} in $!{columnList})
         <result property="${column.property}" column="${column.name}"/>
 #end
     </resultMap>
 
-    <sql id="allCols">
+    <sql id="base_column">
 #set($i = 0)
 #foreach($!{column} in $!{columnList})
-        #if($i==0)#else,#end`${column.name}`
+        #if($i==0)#else,#end${column.name}
 #set($i = $i + 1)
 #end
     </sql>
 
-    <!--
-       开发负责人：${user}
-       功能说明：插入单条数据
-       前台或后台：后台
-       频率：每天1000以下
-       表大小：10W
-       分表数量：无
-       是否有缓存：无
-    -->
-    <insert id="insert" parameterClass="${doClassName}">
-        <![CDATA[
-	    INSERT INTO `${tableName}`(
-	    ]]>
-        <include refid="allCols"/>
-        <![CDATA[
+    <insert id="insert" parameterClass="${package}.${doClassName}" useGeneratedKeys="true" keyProperty="id">
+	    INSERT INTO ${tableName} (
+        <include refid="base_column"/>
         )VALUES(
 #set($i = 0)
 #foreach($!{column} in $!{columnList})
-            #if($i==0) #else,#end#if("$column.name"=="GMT_MODIFIED" || "$column.name"=="GMT_CREATE"|| "$column.name"=="GMT_CREATED")now()#elseif("$column.name"=="IS_DELETED" ||  "$column.name"=="DELETED") 0 #else#${column.property}#
+            #if($i==0) #else,#end#if("$column.name"=="gmt_modified" || "$column.name"=="gmt_create"|| "$column.name"=="gmt_created")now()#elseif("$column.name"=="is_deleted" ||  "$column.name"=="deleted") 0 #else#{${column.property}}
 #end
 #set($i = $i + 1)
 #end
-        );
-        ]]>
+        )
+
 #if($daoUseSequence)#else
         <selectKey resultClass="${primaryKeyColumn.type}" keyProperty="${primaryKeyColumn.property}" >
             SELECT @@IDENTITY AS ${primaryKeyColumn.name}
@@ -50,134 +36,74 @@
 #end
     </insert>
 
-    <!--
-       开发负责人：${user}
-       功能说明：更新单条数据
-       前台或后台：后台
-       频率：每天1000以下
-       表大小：10W
-       分表数量：无
-       是否有缓存：无
-    -->
     <update id="update">
-        <![CDATA[
-        UPDATE `${tableName}` SET #if($haveGmtModified)`GMT_MODIFIED` = now()#else`${primaryKeyColumn.name}` = #${primaryKeyColumn.property}#;
+        UPDATE ${tableName} SET #if($haveGmtModified) gmt_modified = now()#else ${primaryKeyColumn.name} = #{${primaryKeyColumn.property}}
 #end
-        ]]>
-        <dynamic>
 #foreach($!{column} in $!{columnList})
-#if("$column.name"=="GMT_MODIFIED"||"$column.name"=="GMT_CREATE"||"$column.name"=="GMT_CREATED"||"$column.name"=="$!primaryKeyColumn.name")
+#if("$column.name"=="gmt_modified"||"$column.name"=="gmt_create"||"$column.name"=="gmt_created"||"$column.name"=="$!primaryKeyColumn.name")
 #else
-            <isNotNull property="${column.property}" prepend=" , ">
-                `${column.name}` = #${column.property}#
-            </isNotNull>
+            <if test="${column.property} != null">
+                ${column.name} = #{${column.property}},
+            </if>
 #end
 #end
-        </dynamic>
-        <![CDATA[
-        WHERE `${primaryKeyColumn.name}` = #${primaryKeyColumn.property}#;
-    	]]>
+        WHERE ${primaryKeyColumn.name} = #{${primaryKeyColumn.property}}
     </update>
 
-    <!--
-       开发负责人：${user}
-       功能说明：查询单条数据
-       前台或后台：后台
-       频率：每天1000以下
-       表大小：10W
-       分表数量：无
-       是否有缓存：无
-        -->
-    <select id="select" resultMap="result${doClassName}Map">
-        <![CDATA[
+    <select id="select" resultMap="baseMap">
         SELECT
-        ]]>
-        <include refid="allCols"/>
-        <![CDATA[
-        FROM `${tableName}` WHERE `${primaryKeyColumn.name}` = #${primaryKeyColumn.property}#;
-        ]]>
+        <include refid="base_column"/>
+        FROM ${tableName} WHERE ${primaryKeyColumn.name} = #{${primaryKeyColumn.property}}
     </select>
 
-    <!--
-       开发负责人：${user}
-       功能说明：查询多条数据
-       前台或后台：后台
-       频率：每天1000以下
-       表大小：10W
-       分表数量：无
-       是否有缓存：无
-       可能的条件组合:
-    -->
-    <select id="queryList" resultMap="result${doClassName}Map">
-        <![CDATA[
+    <select id="queryList" resultMap="baseMap">
         SELECT
-        ]]>
-        <include refid="allCols"/>
-        <![CDATA[
-        FROM `${tableName}` WHERE#if($haveIsDeleted) `IS_DELETED` = 0#elseif($!haveDeleted) `DELETED` = 0#else 1
+        <include refid="base_column"/>
+        FROM ${tableName}
+        <where>
+            #if($haveIsDeleted) is_deleted = 0 #elseif($!haveDeleted) deleted = 0 #else
 #end
-        ]]>
-        <dynamic>
 #foreach($!{column} in $!{columnQueryList})
-#if("$column.name"=="IS_DELETED"||"$column.name"=="DELETED"||"$column.name"=="GMT_MODIFIED"||"$column.name"=="GMT_CREATE"||"$column.name"=="GMT_CREATED"||"$column.name"=="$!primaryKeyColumn.name")
+#if("$column.name"=="is_deleted"||"$column.name"=="deleted"||"$column.name"=="gmt_modified"||"$column.name"=="gmt_create"||"$column.name"=="gmt_created"||"$column.name"=="$!primaryKeyColumn.name")
 #else
-            <isNotNull property="${column.property}" prepend=" AND ">
-                `${column.name}` = #${column.property}#
-            </isNotNull>
+            <if test= "${column.property} != null">
+                AND ${column.name} = #{${column.property}}
+            </if>
 #end
 #end
-        </dynamic>
+        </where>
 #if($pagerQuery)
-        <![CDATA[
-        ORDER BY `${primaryKeyColumn.name}` DESC
-        LIMIT #startRow#,#limit#;
-        ]]>
+        ORDER BY ${primaryKeyColumn.name} DESC
+        LIMIT #{startRow}, #{limit}
 #end
-
     </select>
 
-    <!--
-       开发负责人：${user}
-       功能说明：查询条数
-       前台或后台：后台
-       频率：每天1000以下
-       表大小：10W
-       分表数量：无
-       是否有缓存：无
-       可能的条件组合:
-    -->
-    <select id="queryCount" resultClass="java.lang.Integer">
-        <![CDATA[
+    <select id="queryCount" resultClass="int">
         SELECT
         COUNT(*)
-        FROM `${tableName}` WHERE  1
-        ]]>
-        <dynamic>
-#foreach($!{column} in $!{columnQueryList})
-            <isNotNull property="${column.property}" prepend=" AND ">
-                `${column.name}` = #${column.property}#
-            </isNotNull>
-#end
-        </dynamic>
+        FROM ${tableName}
+        <where>
+            #if($haveIsDeleted) is_deleted = 0 #elseif($!haveDeleted) deleted = 0 #else
+            #end
+            #foreach($!{column} in $!{columnQueryList})
+                #if("$column.name"=="is_deleted"||"$column.name"=="deleted"||"$column.name"=="gmt_modified"||"$column.name"=="gmt_create"||"$column.name"=="gmt_created"||"$column.name"=="$!primaryKeyColumn.name")
+                #else
+                    <if test= "${column.property} != null">
+                        AND ${column.name} = #{${column.property}}
+                    </if>
+                #end
+            #end
+        </where>
     </select>
 
-    <!--
-       开发负责人：${user}
-       功能说明：物理删除单条数据
-       前台或后台：后台
-       频率：每天100以下
-       表大小：10W
-       分表数量：无
-       是否有缓存：无
-    -->
 #if($daoLogDelete)
     <update id="delete">
-        UPDATE `${tableName}` SET `${deleteKey}` = '1' WHERE `${primaryKeyColumn.name}` = #${primaryKeyColumn.property}#;
+        UPDATE ${tableName} SET ${deleteKey} = '1' WHERE ${primaryKeyColumn.name} = #{${primaryKeyColumn.property}}
     </update>
 #else
     <delete id="delete">
-        DELETE FROM `${tableName}`  WHERE `${primaryKeyColumn.name}` = #${primaryKeyColumn.property}#;
+        DELETE FROM ${tableName}  WHERE ${primaryKeyColumn.name} = #{${primaryKeyColumn.property}}
     </delete>
 #end
 
-</sqlMap>
+</mapper>
